--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 
 </head>
 </body>
+    <nav id="desktop-nav"></nav>
+    <div class="logo">Alvin M.Guatato</div>
+    <div>
+       <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#Experience">Experience</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#Contact">Contact</a></li>
+       </ul>
+    </div>
    <scripts src = "script.js"></scripts>
-   
+
 </html>
