--- a/index.html
+++ b/index.html
@@ -2,23 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="vlewport" content="width-device-width, intial-scale-1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
-
 </head>
+<body>
+    <nav id="desktop-nav">
+        <div class="logo">Alvin M. Guatato</div>
+        <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#Experience">Experience</a></li>
+            <li><a href="#Projects">Projects</a></li>
+            <li><a href="#Contact">Contact</a></li>
+        </ul>
+    </nav>
+    <script src="script.js"></script>
 </body>
-    <nav id="desktop-nav"></nav>
-    <div class="logo">Alvin M.Guatato</div>
-    <div>
-       <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#Experience">Experience</a></li>
-        <li><a href="#Projects">Projects</a></li>
-        <li><a href="#Contact">Contact</a></li>
-       </ul>
-    </div>
-   <scripts src = "script.js"></scripts>
-
 </html>
