Headings update and links 1.0

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class="logo">Alvin M. Guatato</div>
+        <div class="logo">
+            <span class="logo-text">Alvin M. Guatato</span>
+
+        </div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#Experience">Experience</a></li>
