--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="mediaqueries.css">
 <body>
     <nav id="desktop-nav">
-    
+        <div class="logo">
+            <span class="logo-text">Alvin M. Guatato</span>
+        </div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#Experience">Experience</a></li>
