--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
             <li><a href="#Contact" onclick="toggleMenu()">Contact</a></li>
         </ul>
     </nav>
-
+    <section id="profile">
+        <div class="section__pic-container">
+          <img src="./assets/profile-pic-3.png" alt="Profile Picture" />
+        </div>
+        <div class="section__text">
+          <p class="section__text__p1">Hello I am,</p>
+          <h1 class="title">Alvin M. Guatato</h1>
+          <p class="section__text__p2">A TUP BSIT STUDENT</p>
+          <div class="btn-container">
    
     <script src="script.js"></script>
 </body>
