--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-          <img src="./assets/profile-pic-3.png" alt="Profile Picture" />
+          <img src="./Assets/id_pic.jpg" alt="Profile Picture" />
         </div>
         <div class="section__text">
           <p class="section__text__p1">Hello I am,</p>
