CSS AND HTML UPDATE

--- a/index.html
+++ b/index.html
@@ -38,14 +38,23 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-          <img src="./Assets/id_pic.jpg" alt="Profile Picture" />
+          <img src="./Assets/id_pic.png" alt="Profile Picture" />
         </div>
         <div class="section__text">
           <p class="section__text__p1">Hello I am,</p>
           <h1 class="title">Alvin M. Guatato</h1>
           <p class="section__text__p2">A TUP BSIT STUDENT</p>
-          <div class="btn-container">
-   
+            <div class="btn-container">
+                <button
+                  class="btn btn-color-2"
+                  onclick="window.open('./Assets/GUATATO_CURRICULUM-VITAE.pdf')"
+                >
+                  Download CV
+                </button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">
+                  Contact Info
+                </button>
+              </div>
     <script src="script.js"></script>
 </body>
 </html>
