--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <img src="./Assets/id_pic.png" alt="Profile Picture" />
         </div>
         <div class="section__text">
-          <p class="section__text__p1">Hello I am,</p>
+          <p class="section__text__p1">Hello, I am</p>
           <h1 class="title">Alvin M. Guatato</h1>
           <p class="section__text__p2">A TUP BSIT STUDENT</p>
             <div class="btn-container">
