--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
                   Contact Info
                 </button>
               </div>
+              <div id="socials-container">
+                <img
+                  src="./Assets/logo-fb.png"
+                  alt="My Facebook Profile"
+                  class="icon"
+                  onclick="location.href='https://www.facebook.com/guatato.alvin/'"
+                />
+                "
+                />
+              </div>
+            </div>
     <script src="script.js"></script>
 </body>
 </html>
