--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </div>
               <div id="socials-container">
                 <img
-                  src="./Assets/logo-fb.png"
+                  src="./Assets/fb_png.png"
                   alt="My Facebook Profile"
                   class="icon"
                   onclick="location.href='https://www.facebook.com/guatato.alvin/'"
