--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
                   class="icon"
                   onclick="location.href='https://www.facebook.com/guatato.alvin/'"
                 />
-                "
+                <img
+                  src="./Assets/Github_png.png"
+                  alt="My Github Profile"
+                  class="icon"
+                  onclick="location.href='https://github.com/Albean12'"
                 />
               </div>
             </div>
