--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   onclick="location.href='https://www.facebook.com/guatato.alvin/'"
                 />
                 <img
-                  src="./Assets/Github_png.png"
+                  src="./Assets/GitHub_Logo_White.png"
                   alt="My Github Profile"
                   class="icon"
                   onclick="location.href='https://github.com/Albean12'"
