--- a/index.html
+++ b/index.html
@@ -68,6 +68,59 @@
                   class="icon"
                   onclick="location.href='https://github.com/Albean12'"
                 />
+
+              </div>
+            </div>
+          </section>
+          <section id="about">
+            <p class="section__text__p1">Get to Know More</p>
+            <h1 class="title">About Me</h1>
+            <div class="section-container">
+              <div class="section__pic-container">
+                <img
+                  src="./assets/about-pic.png"
+                  alt="Profile Picture"
+                  class="about-pic"
+                />
+              </div>
+              <div class="about-details-container">
+                <div class="about-container">
+                  <div class="details-container">
+                    <img
+                      src="./assets/experience.png"
+                      alt="experience icon"
+                      class="icon"
+                    />
+                    <h3>Experience</h3>
+                    <p>Currently 3rd year <br />BSIT </p>
+                  </div>
+                  <div class="details-container">
+                    <img
+                      src="./Assets/education.png"
+                      alt="education icon"
+                      class="icon"
+                    />
+                    <h3>Education</h3>
+                    <p>
+                      B.S IN INFORMATION TECHNOLOGY <br />
+                      
+                    </p>
+                  </div>
+                </div>
+                <div class="text-container">
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's standard dummy text
+                    ever since the 1500s, when an unknown printer took a galley of
+                    type and scrambled it to make a type specimen book. It has
+                    survived not only five centuries, but also the leap into
+                    electronic typesetting, remaining essentially unchanged. It was
+                    popularised in the 1960s with the release of Letraset sheets
+                    containing Lorem Ipsum passages, and more recently with desktop
+                    publishing software like Aldus PageMaker including versions of
+                    Lorem Ipsum.
+                  </p>
+                </div>
               </div>
             </div>
     <script src="script.js"></script>
