--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
             </div>
           </section>
           <section id="about">
-            <p class="section__text__p1">Get to Know More</p>
+            <p class="section__text__p2">Get to Know More</p>
             <h1 class="title">About Me</h1>
             <div class="section-container">
-              <div class="section__pic-container">
+              <div class="section__pic-container_2">
                 <img
-                  src="./assets/about-pic.png"
+                  src="./Assets/ABOUT_PIC.jpg"
                   alt="Profile Picture"
                   class="about-pic"
                 />
@@ -87,7 +87,7 @@
                 <div class="about-container">
                   <div class="details-container">
                     <img
-                      src="./assets/experience.png"
+                      src="./Assets/MicrosoftTeams-image (20).png"
                       alt="experience icon"
                       class="icon"
                     />
