--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p class="section__text__p2">Get to Know More</p>
             <h1 class="title">About Me</h1>
             <div class="section-container">
-              <div class="section__pic-container_2">
+              <div class="section__pic-container">
                 <img
                   src="./Assets/ABOUT_PIC.jpg"
                   alt="Profile Picture"
@@ -96,7 +96,7 @@
                   </div>
                   <div class="details-container">
                     <img
-                      src="./Assets/education.png"
+                      src="./Assets/grad_hat.png"
                       alt="education icon"
                       class="icon"
                     />
