--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="about-container">
                   <div class="details-container">
                     <img
-                      src="./Assets/MicrosoftTeams-image (20).png"
+                      src="./Assets/exp_png.png"
                       alt="experience icon"
                       class="icon"
                     />
