--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p class="section__text__p2">Get to Know More</p>
             <h1 class="title">About Me</h1>
             <div class="section-container">
-              <div class="section__pic-container_2">
+              <div class="section__pic-container">
                 <img
                   src="./Assets/ABOUT_PIC.jpg"
                   alt="Profile Picture"
