--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p class="section__text__p2">Get to Know More</p>
             <h1 class="title">About Me</h1>
             <div class="section-container">
-              <div class="section__pic-container">
+              <div class="section__pic-container_about">
                 <img
                   src="./Assets/ABOUT_PIC.jpg"
                   alt="Profile Picture"
@@ -85,16 +85,7 @@
               </div>
               <div class="text-container">
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting
-                  industry. Lorem Ipsum has been the industry's standard dummy text
-                  ever since the 1500s, when an unknown printer took a galley of
-                  type and scrambled it to make a type specimen book. It has
-                  survived not only five centuries, but also the leap into
-                  electronic typesetting, remaining essentially unchanged. It was
-                  popularised in the 1960s with the release of Letraset sheets
-                  containing Lorem Ipsum passages, and more recently with desktop
-                  publishing software like Aldus PageMaker including versions of
-                  Lorem Ipsum.
+                  Hello! My name is Alvin M. Guatato, and I'm a motivated student at TECHNOLOGICAL UNIVERSITY MANILA working toward a Bachelor of Science in Information Technology (BS-IT). My career path in information technology has been a fascinating exploration of the constantly changing technological landscape and its seemingly endless possibilities.
                 </p>
               </div>
               <div class="about-details-container">
