--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-          <img src="./Assets/id_pic.jpg" alt="Profile Picture" />
+          <img src="kap.jpg" alt="Profile Picture" />
         </div>
         <div class="section__text">
           <p class="section__text__p1">Hello, I am</p>
@@ -78,7 +78,7 @@
             <div class="section-container">
               <div class="section__pic-container_about">
                 <img
-                  src="./Assets/ABOUT_PIC.jpg"
+                  src="kap.jpg"
                   alt="Profile Picture"
                   class="about-pic"
                 />
@@ -96,8 +96,9 @@
                       alt="experience icon"
                       class="icon"
                     />
-                    <h3>Experience</h3>
-                    <p>Currently 3rd year <br />BSIT </p>
+                      <h3>Experience</h3>
+                      <p>Currently 3rd year <br />BSIT </p>
+    
                   </div>
                   <div class="details-container">
                     <img
