--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-          <img src="kap.jpg" alt="Profile Picture" />
+          <img src="./Assets/id_pic.jpg" alt="Profile Picture" />
         </div>
         <div class="section__text">
           <p class="section__text__p1">Hello, I am</p>
@@ -76,9 +76,9 @@
             <p class="section__text__p2">Get to Know More</p>
             <h1 class="title">About Me</h1>
             <div class="section-container">
-              <div class="section__pic-container_about">
+              <div class="section__pic-container">
                 <img
-                  src="kap.jpg"
+                  src="./Assets/ABOUT_PIC.jpg"
                   alt="Profile Picture"
                   class="about-pic"
                 />
@@ -96,9 +96,8 @@
                       alt="experience icon"
                       class="icon"
                     />
-                      <h3>Experience</h3>
-                      <p>Currently 3rd year <br />BSIT </p>
-    
+                    <h3>Experience</h3>
+                    <p>Currently 3rd year <br />BSIT </p>
                   </div>
                   <div class="details-container">
                     <img
