--- a/index.html
+++ b/index.html
@@ -124,36 +124,36 @@
         <section id="experience">
           <p class="section__text__p1">Explore My</p>
           <h1 class="title">Experience</h1>
-          <div class="experience-details-container">
+          <div class="experience-details-co ntainer">
             <div class="about-container">
               <div class="details-container">
                 <h2 class="experience-sub-title">Frontend Development</h2>
                 <div class="article-container">
                   <article>
                     <img
-                      src="./assets/checkmark.png"
+                      src="./Assets/html_png.png"
                       alt="Experience icon"
                       class="icon"
                     />
                     <div>
                       <h3>HTML</h3>
-                      <p>Experienced</p>
+                      <p>Basic</p>
                     </div>
                   </article>
                   <article>
                     <img
-                      src="./assets/checkmark.png"
+                      src="./assets/html_png.png"
                       alt="Experience icon"
                       class="icon"
                     />
                     <div>
                       <h3>CSS</h3>
-                      <p>Experienced</p>
+                      <p>Basic</p>
                     </div>
                   </article>
                   <article>
                     <img
-                      src="./assets/checkmark.png"
+                      src="./Assets/css_png.png"
                       alt="Experience icon"
                       class="icon"
                     />
@@ -166,15 +166,13 @@
                   </article>
                   <article>
                     <img
-                      src="./assets/checkmark.png"
+                      src="./Assets/java_png.png"
                       alt="Experience icon"
                       class="icon"
                     />
                     <div>
                   
                     <div>
-                      <h3>Material UI</h3>
-                      <p>Intermediate</p>
                     </div>
                   </article>
                 </div>
