--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                
             </div>
             <img
-            src="./assets/arrow.png"
+            src="./Assets/arrow.png"
             alt="Arrow icon"
             class="icon arrow"
             onclick="location.href = './#experience'"
@@ -182,7 +182,7 @@
                 <div class="article-container">
                   <article>
                     <img
-                      src="./assets/checkmark.png"
+                      src="./Assets/GitHub_Logo_White.png"
                       alt="Experience icon"
                       class="icon"
                     />
