--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   </article>
                   <article>
                     <img
-                      src="./assets/html_png.png"
+                      src="./assets/css_png.png"
                       alt="Experience icon"
                       class="icon"
                     />
@@ -153,7 +153,7 @@
                   </article>
                   <article>
                     <img
-                      src="./Assets/css_png.png"
+                      src="./Assets/java_png.png"
                       alt="Experience icon"
                       class="icon"
                     />
@@ -163,12 +163,7 @@
                       <h3>JavaScript</h3>
                       <p>Basic</p>
                     </div>
-                  </article>
-                  <article>
-                    <img
-                      src="./Assets/java_png.png"
-                      alt="Experience icon"
-                      class="icon"
+            
                     />
                     <div>
                   
