--- a/index.html
+++ b/index.html
@@ -212,22 +212,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./Assets/Snake.jpg"
                 alt="Poject 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Snake Game </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/madzamador'"
+                onclick="location.href='https://github.com/Albean12'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='http://www.tup.edu.ph'"
+                onclick="location.href='https://playsnake.org'"
               >
                 Live Demo
               </button>
@@ -245,7 +245,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/madzamador'"
+                onclick="location.href='https://github.com/Albean12'"
               >
                 Github
               </button>
