--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./Assets/banking.JPG"
                 alt="Poject 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Banking System</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -257,27 +257,7 @@
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./Assets/project-3.png"
-                alt="Poject 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/madzamador'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='http://www.tup.edu.ph'"
-              >
-                Live Demo
+         
               </button>
             </div>
           </div>
