--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
         <img
-          src="./assets/email.png"
+          src="./Assets/Gmail.png"
           alt="Email icon"
           class="icon contact-icon email-icon"
         />
