--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           alt="Email icon"
           class="icon contact-icon email-icon"
         />
-        <p><a href="mailto:examplemail@gmail.com">Alvinguatato9@gmail.com</a></p>
+        <p><a href="mailto:examplemail@gmail.com">alvinguatato9@gmail.com</a></p>
       </div>
   </section>
   <footer>
