--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#Experience">Experience</a></li>
-            <li><a href="#Projects">Projects</a></li>
-            <li><a href="#Contact">Contact</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -31,9 +31,9 @@
             </div>
         <ul class="menu-links">
             <li><a href="#about" onclick="toggleMenu()">About</a></li>
-            <li><a href="#Experience" onclick="toggleMenu()">Experience</a></li>
-            <li><a href="#Projects" onclick="toggleMenu()">Projects</a></li>
-            <li><a href="#Contact" onclick="toggleMenu()">Contact</a></li>
+            <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+            <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+            <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </ul>
     </nav>
     <section id="profile">
