--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://playsnake.org'"
+                onclick="location.href='http://www.tup.edu.ph'"
               >
                 Live Demo
               </button>
